--- a/CompanyEmployees/Properties/launchSettings.json
+++ b/CompanyEmployees/Properties/launchSettings.json
@@ -9,10 +9,10 @@
     }
   },
   "profiles": {
-    "CompanyEmployees": {
+    "MiddlewareExample": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": false,
+      "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
