--- a/CompanyEmployees/appsettings.json
+++ b/CompanyEmployees/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "Server=.; database=CompanyEmployee; Integrated Security=true"
+  },
   "AllowedHosts": "*"
 }
