Build: change ConnectionString

--- a/CompanyEmployees/appsettings.json
+++ b/CompanyEmployees/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "ConnectionStrings": {
-    "sqlConnection": "Server=.; database=CompanyEmployee; Integrated Security=true"
+    "sqlConnection": "Server=(local);Initial Catalog=CompanyEmployee;User id=sa;Password=12345; TrustServerCertificate=True"
   },
   "AllowedHosts": "*"
 }
